[package]
name = "test_flare_rust_periphery_package"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Smrt666/flare-rust-periphery-package"
description = "Simple access to abis for flare periphery contracts."
documentation = "TODO"

[dependencies]
hex-literal = "0.4.1"
tokio = "1.39.3"
web3 = "0.19.0"
